public/less/blog.less
// main: styles.less
@import (reference) "variables.less";




#blog-nav {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 999;
}

.menuOpen,
#blog-nav,
#toggle-nav {
    margin-top: 0!important;
}



.blog-hero {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    //width: 100%;
    background-size: cover!important;
    background-position: center center!important;
    min-height: 500px;
    margin: 0;
    mask-image: -webkit-gradient(linear, left 75%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
    z-index: -1;
}

.blog-header {
    display: table;
    width: 100%;
    height: 400px;
    text-shadow:
        1px 1px 4px black,
        2px 2px 12px black,
        4px 4px 20px black;
    
    .post-title {
        @media @phone { font-size: 3.5rem }
    }
    
    .post-title,
    .post-date { color: currentColor }
    
}

.post-info {
    display: table-cell;
    vertical-align: middle;
}

.blog-post {
    position: relative;
    width: 100%;
    margin: 0 auto;
    border: 2px solid white;
    border-radius: 26px;
    text-shadow: 2px 2px 5px white;
    max-width:1200px!important;
    //background: white url('../img/stars.png');
    background: linear-gradient(to bottom, white, rgba(255,255,255,.4) 250px), url('../img/stars.png');
    border: 2px solid white;
    
    &:after {
        display: block;
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        overflow: hidden;
        border-style: solid;
        border-radius: 22px;
        background: white;
        border-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/106403/inset-shadow-image.png') 100 100 100 100 stretch stretch;
        border-width: 100px 100px 100px 100px;
        z-index: -1;
    }
    
    &:before {
        display: block;
        content: '';
        position: absolute;
        top: -16px;
        left: -16px;
        width: ~"calc(100% + 32px)";
        height: ~"calc(100% + 34px)";
        border-style: solid;
        border-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/106403/shadow-image.png') 39 39 41 39 stretch stretch;
        border-width: 39px 39px 41px 39px;
        z-index: -2;
    }
}


.masonry .blog-post--grid {
    padding: 0;
    display: inline-block;
    width: 32%;
    background: black;
    border-radius: 2rem;
    background-position: center center;
    background-size: cover;
    
    // outer link wrap
    a {
        //color: currentColor!important;
        display: block;
        text-decoration: none;
        
        > * { color: currentColor!important; }
    }
    
    @padding: 2rem;
    
    .blog-post--title {
        font-size: 2.2rem;
        margin: @padding @padding @padding*.5 @padding;
    }
    
    .blog-post--excerpt {
        position: relative;
        font-size: 1.4rem;
        padding: 0 @padding @padding @padding;
        color: currentColor!important;
        
        p {
            color: currentColor;
            margin: 0;
            mask-image: -webkit-gradient(linear, left 0%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
        }
        
        .blog-post--excerpt--overlay {
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            margin: 0;
            background: linear-gradient(transparent 5%, currentColor 84%);
            border-radius: 2rem;
        }
    }
    
    @border: .2rem;
    .blog-post--read-more {
        position: absolute;
        bottom: @padding;
        right: @padding*.8;
        text-transform: uppercase;
        background: currentColor;
        font-size: 1rem;
        font-weight: bold;
        border: none;
        border-radius: .6rem;
        transition: .3s all ease-out;
        z-index: 10;
        padding: .5rem 0;
        cursor: pointer;
        
        span {
            position: relative;
            color: white;
            border: @border solid currentColor;
            padding: .5rem;
            border-radius: .6rem;
            
            &:after {
                display: block;
                content: '';
                position: absolute;
                top: -2.5%;
                left: -2.5%;
                width: 105%;
                height: 105%;
                border-radius: .6rem;
                background-color: currentColor;
                opacity: 0;
                transition: .3s opacity ease-out;
                backface-visibility: hidden;
            }
        }
    }
    
    a:hover .blog-post--read-more span:after {
        background-color: currentColor;
        opacity: .325;
    }
}

